confirm change in yml file

--- a/execution-summary/ExecutionSummaryReport_15-08-2023_15-15-09-0724-PM.html
+++ b/execution-summary/ExecutionSummaryReport_15-08-2023_15-15-09-0724-PM.html
@@ -256,7 +256,7 @@
     <br>
     <div class="content">
         <h2 style="clear:both; padding-top: 15px; margin-bottom: 3px">15/08/2023</h2>
-        <h5 style="clear:both; color:Grey">14:41:28 - 14:42:29 (01 min, 00 sec) </h5>
+        <h5 style="clear:both; color:Grey">15:14:12 - 15:15:09 (56 sec, 745 millis) </h5>
         <br>
         <div style="border: 1px solid Grey" class="piechart"></div>
         <br>
